@@ -54,7 +54,7 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.22.0</version>
         <configuration>
-          <argLine>--illegal-access=deny</argLine>
+          <argLine>--add-modules jdk.incubator.httpclient</argLine>
         </configuration>
         <executions>
           <execution>
